--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -5,7 +5,7 @@ export interface Props {
 	href: string;
 }
 
-const { title, body, href } = Astro.props;
+const { href, title, body } = Astro.props;
 ---
 
 <li class="link-card">
